VBranch Website Version # 1
Everything is good in terms of first draft of website for CUNY Startup delieverable due on 4/9.

--- a/VBranch Website/index-4.html
+++ b/VBranch Website/index-4.html
@@ -52,8 +52,8 @@
 							<ul class="sf-menu">
 								<li><a href="index.html">Home</a></li>
 								<li><a href="index-1.html">What We Do</a></li>
-								<li><a href="index-2.html">How We Do It</a></li>
-								<li><a href="index-3.html">Why You Should Join</a></li>
+								<li><a href="index-2.html">Why We Do It</a></li>
+								<li><a href="index-3.html">How You Can Join</a></li>
 								<li class="current"><a href="index-4.html">About Us</a></li>
 							</ul>
 						</nav>
@@ -66,18 +66,17 @@
 		<div class="content"><div class="ic">More Website Templates @ TemplateMonster.com - March 24, 2014!</div>
 			<div class="container_12">
 				<div class="grid_12">
-					<h2>Find Us</h2>
+					<h2>Our Team</h2>
 					<div class="map">
 						<figure class="">
-							<iframe src="http://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Brooklyn,+New+York,+NY,+United+States&amp;aq=0&amp;sll=37.0625,-95.677068&amp;sspn=61.282355,146.513672&amp;ie=UTF8&amp;hq=&amp;hnear=Brooklyn,+Kings,+New+York&amp;ll=40.649974,-73.950005&amp;spn=0.01628,0.025663&amp;z=14&amp;iwloc=A&amp;output=embed"></iframe>
+							<img src="images/team1.jpg" alt="team">
 						</figure>
 						<div class="grid_4 alpha">
 							<h2>Address:</h2>
 							<address>
 								<span class="fa fa-home"></span>
-								138 Atlantis Ln <br>
-								Kingsport <br>
-								Illinois 121164
+								New York<br>
+
 							</address>
 						</div>
 						<div class="grid_4">
@@ -86,21 +85,18 @@
 								<div class="fa fa-phone"></div>
 								+1 800 559 6580
 							</div>
-							<div class="m_phone">
-								<div class="fa fa-print"></div>
-								+1 504 889 9898138
-							</div>
+						
 						</div>
 						<div class="grid_4 omega">
 							<h2>Email:</h2>
-							<a href="#"><span class="fa fa-envelope-o"></span> mail@demolink.org</a>
+							<a href="#"><span class="fa fa-envelope-o"></span> 2018.vbranch@gmail.com</a>
 						</div>
 						<div class="clear"></div>
 					</div>
 					<h2>Contact Form</h2>
-					24/7 support is available for all <span class="col1"><a href="http://www.templatemonster.com/website-templates.php" rel="nofollow">premium</a></span> themes produced by TemplateMonster. Free themes go without it.
+					We love to hear from you about anything Questions/Feedback/Want to Join Us</a></span> 
 					<br>
-					If you want a help in customization of the chosen freebie, address to <span class="col1"><a href="http://www.templatetuning.com/" rel="nofollow">TemplateTuning.</a></span>
+					
 					<form id="form">
 						<div class="success_wrapper">
 							<div class="success-message">Contact form submitted</div>
@@ -155,13 +151,11 @@
 				<div class="grid_5 prefix_3">
 					<h3>Stay Connected</h3>
 					<div class="text1">Follow Us on Social Media Accounts </div>
-					Cras facilisis, nulla vel viverra auctor, leo magna sodales felis, quis malesuada nibh odio ut velit. Proin pharetra
+		
 					<div class="socials">
 						<a href="#"><div class="fa fa-twitter"></div></a>
 						<a href="#"><div class="fa fa-facebook"></div></a>
-						<a href="#"><div class="fa fa-pinterest-square"></div></a>
-						<a href="#"><div class="fa fa-google-plus"></div></a>
-						<a href="#"><div class="fa fa-instagram"></div></a>
+
 					</div>
 				</div>
 			</div>
