--- a/VBranch Website/index.html
+++ b/VBranch Website/index.html
@@ -44,7 +44,7 @@
 				<div class="grid_12">
 					<h1>
 						<a href="index.html">
-							<img src="images/logo.png" alt="Your Happy Family">
+							<img src="images/logo.png" alt="logo">
 						</a>
 					</h1>
 					<div class="menu_block ">
@@ -54,8 +54,8 @@
 							<ul class="sf-menu">
 								<li class="current"><a href="index.html">Home</a></li>
 								<li><a href="index-1.html">What We Do</a></li>
-								<li><a href="index-2.html">How We Do It</a></li>
-								<li><a href="index-3.html">Why You Should Join</a></li>
+								<li><a href="index-2.html">Why We Do It</a></li>
+								<li><a href="index-3.html">How You Can Join</a></li>
 								<li><a href="index-4.html">About Us</a></li>
 							</ul>
 						</nav>
