--- a/VBranch Website/index-3.html
+++ b/VBranch Website/index-3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Why You Should Join</title>
+		<title>How You Can Join</title>
 		<link rel="icon" type="image/png" href="images/logo2.png" />
 		<meta charset="utf-8">
 		<meta name = "format-detection" content = "telephone=no" />
@@ -54,8 +54,8 @@
 							<ul class="sf-menu">
 								<li><a href="index.html">Home</a></li>
 								<li><a href="index-1.html">What We Do</a></li>
-								<li><a href="index-2.html">How We Do It</a></li>
-								<li class="current"><a href="index-3.html">Why You Should Join</a></li>
+								<li><a href="index-2.html">Why We Do It</a></li>
+								<li class="current"><a href="index-3.html">How You Can Join</a></li>
 								<li><a href="index-4.html">About Us</a></li>
 							</ul>
 						</nav>
@@ -69,77 +69,34 @@
 			<div class="container_12">
 				<div class="gallery">
 					<div class="grid_3">
-						<h2>Aliquam nibh antd dictum</h2>
-						<a href="images/big1.jpg" class="gal"><img src="images/page4_img1.jpg" alt=""></a>
-						Broin pharetra luctus diamesque eros convallikoaecenas vehicula egestas venenatis. Duis masser
+						<h2>Sign Up Today</h2>
+						<a href="images/big1.jpg" class="gal"><img src="images/big1.jpg"  height="150" width="150"></a>
+						College Students need to fill out the form and be registered before they can start as a Volunteer.
 						<br>
 						<a href="#" class="btn">Learn More</a>
 					</div>
 					<div class="grid_3">
-						<h2>Praesent faucibus malesu</h2>
-						<a href="images/big2.jpg" class="gal"><img src="images/page4_img2.jpg" alt=""></a>
-						Kroin pharetra luctus diamesque eros convallikoaecenas vehicula egestas venenatis. Duis mass
+						<h2>Log Into Our Tool</h2>
+						<a href="images/big2.jpg" class="gal"><img src="images/big2.jpg" height="150" width="150"></a>
+						Once You are registered, we will give you your personal code to access our tool. 
 						<br>
 						<a href="#" class="btn">Learn More</a>
 					</div>
 					<div class="grid_3">
-						<h2>Hraesenibus malesua</h2>
-						<a href="images/big3.jpg" class="gal"><img src="images/page4_img3.jpg" alt=""></a>
-						Groin pharetra luctus diamesque eros convallikoaecenas vehicula egestas venenatis. Duis massylo
+						<h2>Explore</h2>
+						<a href="images/big3.jpg" class="gal"><img src="images/big3.jpg" height="150" width="150"></a>
+						Find Volunteering opportunities, Add information, Attend workshops... 
 						<br>
 						<a href="#" class="btn">Learn More</a>
 					</div>
 					<div class="grid_3">
-						<h2>Tam nibh antd dictumer</h2>
-						<a href="images/big4.jpg" class="gal"><img src="images/page4_img4.jpg" alt=""></a>
-						Xasroin pharetra luctudiamesque eros convallikoaecenas vehicula egestas venenatisss
+						<h2>Start Making a Difference</h2>
+						<a href="images/big4.jpg" class="gal"><img src="images/big4.jpg" height="150" width="150"></a>
+						Start Making an Impact Today! 
 						<br>
 						<a href="#" class="btn">Learn More</a>
 					</div>
-					<div class="clear"></div>
-					<div class="grid_3">
-						<h2>Stibuluantd dictumertol</h2>
-						<a href="images/big5.jpg" class="gal"><img src="images/page4_img5.jpg" alt=""></a>
-						Kroin pharetra luctus diamesque eros convallikoaecenas vehicula egestas venenatis. Duis mass
-						<br>
-						<a href="#" class="btn">Learn More</a>
-					</div>
-					<div class="grid_3">
-						<h2>Vestibulum volutpat turpi</h2>
-						<a href="images/big6.jpg" class="gal"><img src="images/page4_img6.jpg" alt=""></a>
-						Froin pharetra luctus diamesque eros convallikoaecenas vehicula egestas venenatis. Duis massolo
-						<br>
-						<a href="#" class="btn">Learn More</a>
-					</div>
-					<div class="grid_3">
-						<h2>Ferquam nibh antd dictuo</h2>
-						<a href="images/big7.jpg" class="gal"><img src="images/page4_img7.jpg" alt=""></a>
-						Rein pharetra luctus diamesque eros convallikoaecenas vehicula egestas venenatisis massde
-						<br>
-						<a href="#" class="btn">Learn More</a>
-					</div>
-					<div class="grid_3">
-						<h2>Deram nibh antd dictumo</h2>
-						<a href="images/big8.jpg" class="gal"><img src="images/page4_img8.jpg" alt=""></a>
-						Jroin pharetra luctus diamesque eros convallikoaecenas vehicula egestas venenatis. Duis masolo
-						<br>
-						<a href="#" class="btn">Learn More</a>
-					</div>
-					<div class="clear"></div>
-					<div class="grid_3">
-						<h2>Gertolobh antd dictumew</h2>
-						<a href="images/big9.jpg" class="gal"><img src="images/page4_img9.jpg" alt=""></a>
-						Geroin pharetra luctusdiamesque erosallikoaecenas vehicul egestas venenatis. Duis masswertloi
-						<br>
-						<a href="#" class="btn">Learn More</a>
-					</div>
-					<div class="grid_3">
-						<h2>Aliquam nibh antd dictum</h2>
-						<a href="images/big10.jpg" class="gal"><img src="images/page4_img10.jpg" alt=""></a>
-						Kroin pharetra luctus diamesque eros convallikoaecenas vehicula egestas venenatis. Duis mass
-						<br>
-						<a href="#" class="btn">Learn More</a>
-					</div>
+					
 				</div>
 			</div>
 		</div>
@@ -162,13 +119,11 @@
 				<div class="grid_5 prefix_3">
 					<h3>Stay Connected</h3>
 					<div class="text1">Follow Us on Social Media Accounts </div>
-					Cras facilisis, nulla vel viverra auctor, leo magna sodales felis, quis malesuada nibh odio ut velit. Proin pharetra
+
 					<div class="socials">
 						<a href="#"><div class="fa fa-twitter"></div></a>
 						<a href="#"><div class="fa fa-facebook"></div></a>
-						<a href="#"><div class="fa fa-pinterest-square"></div></a>
-						<a href="#"><div class="fa fa-google-plus"></div></a>
-						<a href="#"><div class="fa fa-instagram"></div></a>
+
 					</div>
 				</div>
 			</div>
